# DinosAmazingSysAudit

./: .gitignore  README.md  audit-system.yaml.example  pyproject.toml
auditsys/: __init__.py  cli.py  config.py  logger.py  models.py  store.py
auditsys/collectors/: journalctl_collector.py
auditsys/reports/: __init__.py  csv_report.py  html_report.py  json_report.py
auditsys/reports/templates/: report.html.j2
auditsys/tui/: app.py  common.py  screens.py
collectors/: __init__.py  auditd_collector.py  base.py  docker_collector.py  stat_collector.py
etc/: audit-system.yaml.example
reports/: audit-report-20260722T212802Z.html
scripts/: install.sh  uninstall.sh
systemd/: audit-system-sync.service  audit-system-sync.timer
tests/: test_auditd_parsing.py  test_journalctl_parsing.py  test_recursive_and_actors.py  test_store_and_correlation.py  test_tui_navigation.py  test_tui_settings.py
tui/: app.py  screens.py
